--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Config
+config.js
+
 # Logs
 logs
 *.log
@@ -81,6 +84,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+tmp
 
 # Gatsby files
 .cache/
