--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/bin/server.js",
-    "test": "echo \"Information: no test specified\" && exit 0",
+    "test": "echo \"Information: no test specified\"",
     "build": "bash scripts/build.sh",
     "update-static": "bash scripts/update-static.sh"
   },
@@ -20,7 +20,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^7.0.0",
+    "koa-views": "^6.3.1",
     "koa2-connect": "^1.0.2",
     "minimalistic-assert": "^1.0.1",
     "pug": "^3.0.1",
