--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/minimalistic-assert": "^1.0.1",
     "create-hash": "^1.2.0",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.6",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
