--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-SESSION_KEY='abcdefghijklmnop'
+PORT=3000
+SESSION_KEY="abcdefghijklmnop"
 WAF=on
 POW=on
 NONCE_VALIDITY=60000
 INITIAL_DIFFICULTY=13
-BACKEND_URL='http://example.com'
+BACKEND_URL="http://example.com"
