--- a/docker-compose.example.yaml
+++ b/docker-compose.example.yaml
@@ -11,6 +11,12 @@ services:
       - NONCE_VALIDITY=60000
       - INITIAL_DIFFICULTY=13
       - BACKEND_URL="http://example.com"
+      - RATE_LIMIT=on
+      - RATE_LIMIT_SAMPLE_MINUTES=60
+      - RATE_LIMIT_SESSION_THRESHOLD=100
+      - RATE_LIMIT_BAN_IP=on
+      - RATE_LIMIT_IP_THRESHOLD=500
+      - RATE_LIMIT_BAN_MINUTES=15
     expose:
       - '3000'
     ports:
