--- a/package.json
+++ b/package.json
@@ -9,36 +9,41 @@
     "update-static": "bash scripts/update-static.sh"
   },
   "dependencies": {
+    "@types/cron": "^1.7.2",
+    "@types/koa-session-minimal": "^3.0.5",
     "@types/minimalistic-assert": "^1.0.1",
     "create-hash": "^1.2.0",
+    "cron": "^1.8.2",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.6",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-generic-session": "^2.1.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^10.0.0",
+    "koa-session-minimal": "^4.0.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.3.1",
     "koa2-connect": "^1.0.2",
     "minimalistic-assert": "^1.0.1",
+    "moment": "^2.29.1",
     "pug": "^3.0.1",
     "randomstring": "^1.1.5",
-    "source-map-loader": "^2.0.1"
+    "source-map-loader": "^2.0.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/create-hash": "^1.2.2",
     "@types/debug": "^4.1.5",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-generic-session": "^1.0.5",
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
     "@types/koa-views": "^2.0.4",
     "@types/randomstring": "^1.1.6",
+    "@types/sqlite3": "^3.1.7",
     "awesome-typescript-loader": "^5.2.1",
     "browserify": "^17.0.0",
     "typescript": "^4.2.3",
