--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/bin/server.js",
-    "test": "echo \"Information: no test specified\"",
+    "test": "jest --runInBand --forceExit --detectOpenHandles",
     "build": "bash scripts/build.sh",
     "update-static": "bash scripts/update-static.sh"
   },
@@ -34,6 +34,7 @@
     "@types/create-hash": "^1.2.2",
     "@types/cron": "^1.7.2",
     "@types/debug": "^4.1.5",
+    "@types/jest": "^26.0.20",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
@@ -46,6 +47,12 @@
     "@types/sqlite3": "^3.1.7",
     "awesome-typescript-loader": "^5.2.1",
     "browserify": "^17.0.0",
+    "jest": "^26.6.3",
+    "jest-html-reporters": "^2.1.2",
+    "jest-puppeteer": "^4.4.0",
+    "merge": "^2.1.1",
+    "puppeteer": "^8.0.0",
+    "ts-jest": "^26.5.3",
     "typescript": "^4.2.3",
     "uglify-js": "^3.13.1",
     "uglifyify": "^5.0.2"
