--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 PORT=3000
 SESSION_KEY="abcdefghijklmnop"
-WAF=on
 POW=on
 NONCE_VALIDITY=60000
 INITIAL_DIFFICULTY=13
@@ -12,3 +11,8 @@ RATE_LIMIT_SESSION_THRESHOLD=100
 RATE_LIMIT_BAN_IP=on
 RATE_LIMIT_IP_THRESHOLD=500
 RATE_LIMIT_BAN_MINUTES=15
+
+WAF=on
+WAF_URL_EXCLUDE_RULES=
+WAF_HEADER_EXCLUDE_RULES=14,33,80,96,100
+WAF_BODY_EXCLUDE_RULES=
