--- a/docker-compose.example.yaml
+++ b/docker-compose.example.yaml
@@ -6,7 +6,6 @@ services:
     environment:
       - PORT=3000
       - SESSION_KEY="abcdefghijklmnop"
-      - WAF=on
       - POW=on
       - NONCE_VALIDITY=60000
       - INITIAL_DIFFICULTY=13
@@ -17,6 +16,10 @@ services:
       - RATE_LIMIT_BAN_IP=on
       - RATE_LIMIT_IP_THRESHOLD=500
       - RATE_LIMIT_BAN_MINUTES=15
+      - WAF=on
+      - WAF_URL_EXCLUDE_RULES=
+      - WAF_HEADER_EXCLUDE_RULES=14,33,80,96,100
+      - WAF_BODY_EXCLUDE_RULES=
     expose:
       - '3000'
     ports:
