change database to redis

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ NONCE_VALIDITY=60000
 INITIAL_DIFFICULTY=13
 BACKEND_URL="http://example.com"
 
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=6379
+DATABASE_PASSWORD=
+
 RATE_LIMIT=on
 RATE_LIMIT_SAMPLE_MINUTES=60
 RATE_LIMIT_SESSION_THRESHOLD=100
