--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/bin/server.js",
+    "start-standalone": "set NODE_ENV=standalone&& node dist/bin/server.js",
     "test": "jest --runInBand --forceExit --detectOpenHandles",
     "build": "bash scripts/build.sh",
     "update-static": "bash scripts/update-static.sh"
@@ -14,10 +15,12 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.1.0",
+    "ioredis": "^4.25.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
+    "koa-redis": "^4.0.1",
     "koa-router": "^10.0.0",
     "koa-session-minimal": "^4.0.1",
     "koa-static": "^5.0.0",
@@ -26,13 +29,13 @@
     "moment": "^2.29.1",
     "pug": "^3.0.1",
     "randomstring": "^1.1.5",
-    "source-map-loader": "^2.0.1",
-    "sqlite3": "^5.0.2"
+    "source-map-loader": "^2.0.1"
   },
   "devDependencies": {
     "@types/create-hash": "^1.2.2",
     "@types/cron": "^1.7.2",
     "@types/debug": "^4.1.5",
+    "@types/ioredis": "^4.22.3",
     "@types/jest": "^26.0.22",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
@@ -42,9 +45,9 @@
     "@types/koa-session-minimal": "^3.0.5",
     "@types/koa-views": "^2.0.4",
     "@types/randomstring": "^1.1.6",
-    "@types/sqlite3": "^3.1.7",
     "awesome-typescript-loader": "^5.2.1",
     "browserify": "^17.0.0",
+    "ioredis-mock": "^5.4.1",
     "jest": "^26.6.3",
     "jest-html-reporters": "^2.1.3",
     "jest-puppeteer": "^4.4.0",
