--- a/docker-compose.example.yaml
+++ b/docker-compose.example.yaml
@@ -2,30 +2,37 @@ version: '3.4'
 
 services:
   pow-shield:
+    container_name: pow-shield
     image: ruisiang/pow-shield
     environment:
-      - PORT=3000
-      - SESSION_KEY="abcdefghijklmnop"
-      - POW=on
-      - NONCE_VALIDITY=60000
-      - INITIAL_DIFFICULTY=13
-      - BACKEND_URL="http://example.com"
-      - DATABASE_HOST=redis
-      - DATABASE_PORT=6379
-      - DATABASE_PASSWORD=
-      - RATE_LIMIT=on
-      - RATE_LIMIT_SAMPLE_MINUTES=60
-      - RATE_LIMIT_SESSION_THRESHOLD=100
-      - RATE_LIMIT_BAN_IP=on
-      - RATE_LIMIT_IP_THRESHOLD=500
-      - RATE_LIMIT_BAN_MINUTES=15
-      - WAF=on
-      - WAF_URL_EXCLUDE_RULES=
-      - WAF_HEADER_EXCLUDE_RULES=14,33,80,96,100
-      - WAF_BODY_EXCLUDE_RULES=
-    expose:
-      - '3000'
+      - 'PORT=3000'
+      - 'SESSION_KEY=abcdefghijklmnop'
+      - 'POW=on'
+      - 'NONCE_VALIDITY=60000'
+      - 'INITIAL_DIFFICULTY=13'
+      - 'BACKEND_URL=http://webapp:3000'
+      - 'DATABASE_HOST=redis'
+      - 'DATABASE_PORT=6379'
+      - 'DATABASE_PASSWORD='
+      - 'RATE_LIMIT=on'
+      - 'RATE_LIMIT_SAMPLE_MINUTES=60'
+      - 'RATE_LIMIT_SESSION_THRESHOLD=100'
+      - 'RATE_LIMIT_BAN_IP=on'
+      - 'RATE_LIMIT_IP_THRESHOLD=500'
+      - 'RATE_LIMIT_BAN_MINUTES=15'
+      - 'WAF=on'
+      - 'WAF_URL_EXCLUDE_RULES='
+      - 'WAF_HEADER_EXCLUDE_RULES=14,33,80,96,100'
+      - 'WAF_BODY_EXCLUDE_RULES='
     ports:
       - '3000:3000'
   redis:
+    container_name: redis
     image: redis:alpine
+
+  #####################################
+  # Test hello-world webapp container #
+  #####################################
+  webapp:
+    container_name: webapp
+    image: heroku/nodejs-hello-world
