--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:standalone": "NODE_ENV=standalone node dist/bin/server.js",
     "start:standalone-win": "set NODE_ENV=standalone&& node dist/bin/server.js",
     "test": "jest --runInBand --forceExit --detectOpenHandles",
+    "stress": "bash scripts/stress.sh",
     "build": "bash scripts/build.sh",
     "update-static": "bash scripts/update-static.sh"
   },
@@ -51,6 +52,7 @@
     "jest": "27.5.1",
     "jest-html-reporters": "3.0.5",
     "jest-puppeteer": "6.1.0",
+    "loadtest": "^5.2.0",
     "merge": "2.1.1",
     "puppeteer": "13.3.2",
     "ts-jest": "27.1.3",
