Add SSL parameters and functionality

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ WAF=on
 WAF_URL_EXCLUDE_RULES=
 WAF_HEADER_EXCLUDE_RULES=14,33,80,96,100
 WAF_BODY_EXCLUDE_RULES=
+
+SSL=off
+SSL_CERT_PATH=
+SSL_KEY_PATH=
