--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "create-hash": "1.2.0",
     "cron": "1.8.2",
     "debug": "4.3.3",
-    "dotenv": "16.0.0",
+    "dotenv": "^16.0.0",
     "http-proxy-middleware": "2.0.3",
+    "https": "^1.0.0",
     "ioredis": "4.28.5",
     "ioredis-mock": "7.0.0",
     "koa": "2.13.4",
