add control socket support

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=3000
 SESSION_KEY="abcdefghijklmnop"
 POW=on
 NONCE_VALIDITY=60000
-INITIAL_DIFFICULTY=13
+DIFFICULTY=13
 BACKEND_URL="http://example.com"
 
 DATABASE_HOST=127.0.0.1
@@ -24,3 +24,7 @@ WAF_BODY_EXCLUDE_RULES=
 SSL=off
 SSL_CERT_PATH=
 SSL_KEY_PATH=
+
+SOCKET=off
+SOCKET_URL=http://hostname:port
+SOCKET_TOKEN=pow-phalanx-subscription-token
