Pow phalanx connection (#341)
* edit redis prefix and change db service name

* add control socket support

* fix incorrect socket response

* add whitelist functionality and add two stats

* update readme

* add blacklist sync

* add update_model placeholder

* update dependencies

* fix deepsource issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pow-shield",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "start": "node dist/bin/server.js",
@@ -33,6 +33,7 @@
     "moment": "2.29.3",
     "pug": "3.0.2",
     "randomstring": "1.2.2",
+    "socket.io-client": "^4.4.1",
     "source-map-loader": "3.0.1"
   },
   "devDependencies": {
