--- a/docker-compose.example.yaml
+++ b/docker-compose.example.yaml
@@ -9,7 +9,7 @@ services:
       - 'SESSION_KEY=abcdefghijklmnop'
       - 'POW=on'
       - 'NONCE_VALIDITY=60000'
-      - 'INITIAL_DIFFICULTY=13'
+      - 'DIFFICULTY=13'
       - 'BACKEND_URL=http://webapp:80'
       - 'DATABASE_HOST=redis'
       - 'DATABASE_PORT=6379'
