--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:standalone": "NODE_ENV=standalone node dist/bin/server.js",
     "start:standalone-win": "set NODE_ENV=standalone&& node dist/bin/server.js",
     "test": "jest --runInBand --forceExit --detectOpenHandles",
+    "test:coverage": "jest --runInBand --forceExit --detectOpenHandles --coverage",
     "stress": "bash scripts/stress.sh",
     "build": "bash scripts/build.sh",
     "update-static": "bash scripts/update-static.sh"
